# tropikey

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  flake.nix  shell.nix
include/: device.hpp  key.hpp  pkcs11_module.hpp
include/pkcs11/: pkcs11f.h  pkcs11t.h
nix/: tropikey-module.nix
src/: device.cpp  device.hpp  key.cpp  main.cpp  pkcs11_module.cpp
